Add ability to gracefully shutdown - CLM-29623 (#11098)