@@ -1503,10 +1503,18 @@
 
          https://docs.oracle.com/en/java/javase/17/migrate/migrating-jdk-8-later-jdk-releases.html#GUID-12F945EB-71D6-46AF-8C3D-D354FD0B1781
          The libraries implicated in this exception are guice, openjpa and some of the testing/assertion libraries
+
+         Note that mockito may use reflection to access non-public fields/methods when creating mocks/spies.
+         For each of these cases, where reflective access is needed, we need to add the module/package containing the 
+         target classes we want to mock/spy below.
+         If we don't do this you'll likely see
+         "IllegalAccessException ReflectionMemberAccessor cannot access a member of class X ..."
+         when running the test.
          -->
         <argLine>
           --add-opens java.base/java.lang=ALL-UNNAMED
           --add-opens java.base/java.util=ALL-UNNAMED
+          --add-opens java.base/java.util.concurrent=ALL-UNNAMED
           --add-opens java.base/java.security=ALL-UNNAMED
           --add-opens java.base/sun.security.rsa=ALL-UNNAMED
           --add-opens java.base/sun.security.x509=ALL-UNNAMED
